# gurufocus-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: implementation_tracker.md
docs/procedures/: release_procedure.md
docs/prompts/: jmespath-query-test-prompt.md
scripts/: test_endpoints.sh
