[project]
name = "gurufocus-mcp-workspace"
version = "0.3.0"
description = "GuruFocus MCP Server and Python API Library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "ipython>=9.8.0",
    "bumpver>=2023.1129",
    "pre-commit>=4.5.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
gurufocus-api = { workspace = true }
gurufocus-mcp = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gurufocus_api", "gurufocus_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "packages/gurufocus-api:packages/gurufocus-mcp"
exclude = ["tests_api/", "tests_mcp/", "examples/", "scripts/"]

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "structlog",
    "structlog.*",
    "diskcache",
    "diskcache.*",
    "opentelemetry",
    "opentelemetry.*",
    "fastmcp",
    "fastmcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/gurufocus-api/tests_api", "packages/gurufocus-mcp/tests_mcp"]
addopts = "-ra -q --import-mode=importlib"

[tool.bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"packages/gurufocus-api/pyproject.toml" = ['version = "{version}"']
"packages/gurufocus-mcp/pyproject.toml" = ['version = "{version}"']
